--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">R</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#0719D4;">O</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    	<h2 style="color:#D14D39;">S</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">O</h2>
+    	<h2 style="color:#8FAD00;">A</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">C</h2>
+    	<h2 style="color:#8377E4;">R</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">A</h2>
+    	<h2 style="color:#99C96A;">I</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">K</h2>
+    	<h2 style="color:#20CFB4;">I</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -158,8 +158,8 @@
 					<button class="btn btn-primary" id="turn_on">Turn On Lights xixi</_></button>
 					<button class="btn btn-primary" id="play">Play Music 🎶</button>
 					<button class="btn btn-primary" id="bannar_coming">Dekorasi Bareng Yuk 😆</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
+					<button class="btn btn-primary" id="balloons_flying">Yukk Fly With Balloons 🎈</button>
+					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever HAHA</button>
 					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday Akak Rosari</button>
 					<button class="btn btn-primary" id="story">Ada Pesan nih buat Akak 😎</button>
